<resources>
    <!--app name-->
    <string name="app_name">Fragment</string>
    <!--menu-->
    <string name="action_settings">Settings</string>
    <!--navigation menu -->
    <string name="main_nav_temperature">Temperature</string>
    <string name="main_nav_meteo">Meteo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fragment App Aston Week 6 by Orestes</string>
    <string name="nav_header_subtitle">Testing App</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="temperature_title">Convertir Celsius en Fahrenheit</string>
    <string name="temperature_hint_celsius">Entrez un Celsius</string>
    <string name="temperature_hint_fahrenheit">Entrez un Fahrenheit</string>
    <string name="temperature_unit_fahrenheit">°F</string>
    <string name="temperature_unit_celsius">°C</string>
    <string name="temperature_button_save">Sauvegarder</string>
    <string name="meteo_title">La Meteo</string>
    <string name="temperature_convert_text">%s °C\'est égal à %s°F"</string>
    <string name="action_delete">Tout effacer</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="meteo_city">City</string>
    <string name="meteo_temperature">Temperature</string>
    <string name="meteo_hint_city">Entrez une ville</string>
    <string name="meteo_dialog_city_empty">Vous devez saisir une ville</string>
    <string name="meteo_dialog_network">Vous devez être conecté</string>


</resources>
